test/spec/memory.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/memory.wast
(;; STDOUT ;;;
out/test/spec/memory.wast:8: assert_invalid passed:
  error: only one memory block allowed
  000000f: error: OnMemory callback failed
out/test/spec/memory.wast:9: assert_invalid passed:
  error: only one memory block allowed
  0000023: error: OnMemory callback failed
out/test/spec/memory.wast:18: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/memory.wast:19: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/memory.wast:20: assert_invalid passed:
  0000000: error: memory variable out of range: 0 (max 0)
  000000c: error: BeginDataSegment callback failed
out/test/spec/memory.wast:23: assert_invalid passed:
  error: memory variable out of range: 0 (max 0)
  000001c: error: OnLoadExpr callback failed
out/test/spec/memory.wast:27: assert_invalid passed:
  error: memory variable out of range: 0 (max 0)
  0000021: error: OnStoreExpr callback failed
out/test/spec/memory.wast:31: assert_invalid passed:
  error: memory variable out of range: 0 (max 0)
  000001c: error: OnLoadExpr callback failed
out/test/spec/memory.wast:35: assert_invalid passed:
  error: memory variable out of range: 0 (max 0)
  000001e: error: OnStoreExpr callback failed
out/test/spec/memory.wast:39: assert_invalid passed:
  error: memory variable out of range: 0 (max 0)
  0000019: error: OnMemorySizeExpr callback failed
out/test/spec/memory.wast:43: assert_invalid passed:
  error: memory variable out of range: 0 (max 0)
  000001b: error: OnMemoryGrowExpr callback failed
out/test/spec/memory.wast:49: assert_invalid passed:
  error: max pages (0) must be >= initial pages (1)
  000000e: error: OnMemory callback failed
out/test/spec/memory.wast:53: assert_invalid passed:
  error: initial pages (65537) must be <= (65536)
  000000f: error: OnMemory callback failed
out/test/spec/memory.wast:57: assert_invalid passed:
  error: initial pages (2147483648) must be <= (65536)
  0000011: error: OnMemory callback failed
out/test/spec/memory.wast:61: assert_invalid passed:
  error: initial pages (4294967295) must be <= (65536)
  0000011: error: OnMemory callback failed
out/test/spec/memory.wast:65: assert_invalid passed:
  error: max pages (65537) must be <= (65536)
  0000010: error: OnMemory callback failed
out/test/spec/memory.wast:69: assert_invalid passed:
  error: max pages (2147483648) must be <= (65536)
  0000012: error: OnMemory callback failed
out/test/spec/memory.wast:73: assert_invalid passed:
  error: max pages (4294967295) must be <= (65536)
  0000012: error: OnMemory callback failed
out/test/spec/memory.wast:216: assert_malformed passed:
  out/test/spec/memory/memory.26.wat:1:17: error: redefinition of memory "$foo"
  (memory $foo 1)(memory $foo 1)
                  ^^^^^^
out/test/spec/memory.wast:220: assert_malformed passed:
  out/test/spec/memory/memory.27.wat:1:32: error: redefinition of memory "$foo"
  (import "" "" (memory $foo 1))(memory $foo 1)
                                 ^^^^^^
out/test/spec/memory.wast:224: assert_malformed passed:
  out/test/spec/memory/memory.28.wat:1:32: error: redefinition of memory "$foo"
  (import "" "" (memory $foo 1))(import "" "" (memory $foo 1))
                                 ^^^^^^
66/66 tests passed.
;;; STDOUT ;;)
